# bt_api_bitstamp

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_bitstamp/: __init__.py  plugin.py  registry_registration.py
src/bt_api_bitstamp/containers/: __init__.py
src/bt_api_bitstamp/containers/balances/: __init__.py
src/bt_api_bitstamp/containers/orders/: __init__.py
src/bt_api_bitstamp/errors/: __init__.py
src/bt_api_bitstamp/exchange_data/: __init__.py
src/bt_api_bitstamp/feeds/: __init__.py
src/bt_api_bitstamp/feeds/live_bitstamp/: __init__.py  spot.py
src/bt_api_bitstamp/tickers/: __init__.py
tests/: test_bitstamp_ticker.py
tests/containers/exchanges/: test_bitstamp_exchange_data.py
tests/containers/tickers/: test_bitstamp_ticker.py
tests/exchange_registers/: test_register_bitstamp.py
tests/feeds/: test_bitstamp_request_base.py
