[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_bitstamp"
version = "0.1.1"
description = "Bitstamp exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "cloudQuant", email = "yunjinqi@gmail.com"}]
keywords = ["bt_api", "bitstamp", "exchange"]
dependencies = [
    "bt_api_base>=0.15,<1.0",
    "requests>=2.28",
    "websocket-client>=1.5",
    "aiohttp>=3.9",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api"
Documentation = "https://cloudquant.github.io/bt_api/"
Repository = "https://github.com/cloudQuant/bt_api"

[project.entry-points."bt_api.plugins"]
bitstamp = "bt_api_bitstamp.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bt_api_bitstamp = ["configs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C4", "T20", "YTT",
    "ASYNC", "BLE", "COM", "DTZ", "EM", "ISC", "ICN", "G",
    "PIE", "T10", "DJ", "S", "N", "RUF100", "PERF", "PIE790",
]
ignore = [
    "E501", "B008", "N802", "N803", "S101",
    "EM102", "F401", "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
